<resources>
    <string name="app_name">OC Cars</string>

    <!-- LAYOUT LABEL STRINGS -->
    <string name="title_activity_main">Car Dealership</string>
    <string name="instruction">Enter car purchase information.</string>
    <string name="dollar_sign">$</string>
    <string name="car_price">What is the price of your car?</string>
    <string name="down_payment">What is your cash down payment?</string>
    <string name="loan_term">Choose your loan term</string>
    <string name="years3">3 years</string>
    <string name="years4">4 years</string>
    <string name="years5">5 years</string>
    <string name="loan_summary">Your Loan Summary</string>
    <string name="loan_report_button_text">Loan Report</string>
    <string name="go_data_entry">Return to Data Entry</string>

    <!-- REPORT STRINGS -->
    <string name="report_line1"> \n\t\t\t<b>Monthly Payment:</b>$\t\n</string>
    <string name="report_line2"> \n\tCar Sticker Price: $</string>
    <string name="report_line3"> \tYou will put down: $</string>
    <string name="report_line4"> \n\tLoan Term is </string>
    <string name="report_line5"> \tTaxed Amt: $ </string>
    <string name="report_line6"> \tYour Cost: $</string>
    <string name="report_line7"> \tBorrowed Amount: $</string>
    <string name="report_line8"> \tInterest Amount: $</string>

    <string name="report_line9"> \nNOTE: </string>
    <string name="report_line10"> \n1. Loan information is made available by OC Cars.</string>
    <string name="report_line11"> \n2. A sales tax rate of 8% is required in Costa Mesa.</string>
    <string name="report_line12"> \n3. Vehicles are financed at an annual interest rate of 9%.\n\n</string>

</resources>
